# elastic-rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  Taskfile.yml  pyproject.toml
Prompts/: memory_leakage_detection.md  quality_code_examination.md
Prompts/reports/: 2025-11-02_code_quality_review.md  2025-11-02_memory_leakage_analysis.md  2025-11-27_comprehensive_code_review.md
demos/: README.md  benchmark_performance.py  demo_phase3.py  demo_phase4.py  demo_phase5.py  demo_phase6.py  demo_phase7.py  demo_system_health.py  demo_upload_verification.py  launch_ui.py
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  GRADIO_UI_PLAN.md  IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  UI_GUIDE.md
docs/architecture/: component_architecture.md  data_flow.md  deployment_architecture.md  module_structure.md  overview.md  security_architecture.md  technology_stack.md
docs/implementation_plan/: dependencies_matrix.md  notes_and_decisions.md  overview.md  phase_1_project_setup.md  phase_2_configuration_system.md  phase_3_document_processing.md  phase_4_elasticsearch_integration.md  phase_5_llm_and_agent.md  phase_6_resilience_layer.md  phase_7_api_development.md  phase_8_testing_and_qa.md  phase_9_documentation_and_deployment.md  risk_tracking.md
docs/requirements/: appendices.md  configuration.md  deliverables.md  development_workflow.md  functional_requirements.md  non_functional_requirements.md  overview.md  project_structure.md  risks_and_mitigation.md  success_criteria.md  system_architecture.md  system_dependencies.md  technical_requirements.md  timeline.md
examples/: README.md  basic_query.py  basic_upload.py  curl_examples.sh
issues_tracking/: 2025-10-31_09-19-23_001_gradio_ui_improvements.md
src/: __init__.py  main.py
src/agent/: __init__.py  rag_agent.py  runner.py
src/ai_models/: __init__.py  embedder.py  litellm_interface.py
src/api/: __init__.py  documents.py  exceptions.py  health.py  models.py  query.py
src/config/: base.py  secrets.py  settings.py
src/pipeline/: __init__.py  chunker.py  document_processor.py  ingestion.py
src/resilience/: __init__.py  circuit_breaker.py  health_probes.py
src/retrieval/: __init__.py  elasticsearch_client.py  index_manager.py  indexer.py  searcher.py
src/ui/: __init__.py  api_client.py  gradio_app.py
tests/: __init__.py
tests/e2e/: test_complete_flow.py
tests/fixtures/: sample.html  sample.txt
tests/integration/: test_api_integration.py  test_elasticsearch_state.py  test_ingestion_pipeline.py  test_resilience.py
tests/ui/: test_gradio_app.py
(+17 files in other folders)
